@@ -261,6 +261,11 @@
       color: $lightGrey;
     }
   }
+  
+  .no-bg {
+    background: none;
+    color: $darkGrey;
+  }
 
   
 }
